--- a/android/app/src/main/res/values/styles.xml
+++ b/android/app/src/main/res/values/styles.xml
@@ -3,6 +3,16 @@
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your theme here. -->
+        <item name="actionMenuTextColor">#666</item>
+        <item name="android:actionMenuTextAppearance">@style/MenuTextStyle</item>
+        <item name="actionMenuTextAppearance">@style/MenuTextStyle</item>
+        <item name="colorPrimaryDark">#f2f4f5</item>
+        <item name="android:windowIsTranslucent">true</item>
+    </style>
+
+    <style name="MenuTextStyle">
+        <item name="android:textColor">#666</item>
+        <item name="android:textSize">18sp</item>
     </style>
 
 </resources>
